--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Practicando</h1>
+    <p>Espero lograr el objetivo</p>
 </body>
 </html>
